--- a/talks/java-n/index.html
+++ b/talks/java-n/index.html
@@ -409,6 +409,31 @@
             <blockquote>Expose JDK Flight Recorder data for continuous monitoring.</blockquote>
         </section>
 
+        <section>
+            <h2>JEP 305: Pattern Matching for instanceof (Preview)</h2>
+            <br>
+            <blockquote>Enhance the Java programming language with pattern matching for the instanceof operator.</blockquote>
+        </section>
+
+        <section>
+            <h2>JEP 359: Records (Preview)</h2>
+            <br>
+            <blockquote>Enhance the Java programming language with records.</blockquote>
+        </section>
+
+
+        <section>
+            <h2>JEP 361: Switch Expressions (Standard)</h2>
+            <br>
+            <blockquote>Extend switch so it can be used as either a statement or an expression</blockquote>
+        </section>
+
+        <section>
+            <h2>JEP 363: Remove the Concurrent Mark Sweep (CMS) Garbage Collector</h2>
+            <br>
+            <blockquote>Remove the Concurrent Mark Sweep (CMS) garbage collector.</blockquote>
+        </section>
+
 
         <section>
             <h2>JEP 352: Non-Volatile Mapped Byte Buffers</h2>
