--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -116,6 +116,10 @@
     <img src="img/89.png" width="800"/>
     <img src="img/90.jpeg" width="800"/>
     <img src="img/91.png" width="800"/>
+    <img src="img/92.png" width="800"/>
+    <img src="img/93.png" width="800"/>
+    <img src="img/94.png" width="800"/>
+    <img src="img/95.png" width="800"/>
 </div>
 
 </body>
