--- a/talks/index.html
+++ b/talks/index.html
@@ -54,7 +54,7 @@
     <tr>
         <td>82.</td>
         <td>JSession</td>
-        <td><a href="https://www.facebook.com/events/601356630451391/">JSession</a></td>
+        <td><a href="https://www.facebook.com/events/601356630451391/">Fantastic Frameworks and How to Avoid Them</a></td>
         <td>18.03.2020</td>
         <td>Online</td>
     </tr>
