--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -120,7 +120,7 @@
     <img src="img/93.png" width="800"/>
     <img src="img/94.png" width="800"/>
     <img src="img/95.png" width="800"/>
-    <img src="img/96.png" width="800"/>
+    <img src="img/96.jpg" width="800"/>
 </div>
 
 </body>
