--- a/talks/hazelcast/index.html
+++ b/talks/hazelcast/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Fantastic Frameworks and How to Avoid Them</title>
+    <title>Hazelcast: The Hitchhiker's Guide</title>
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -87,9 +87,6 @@
 
             The Hazelcast IMDG is an operational in-memory computing platform that manages data and distributes
             processing using memory and parallel execution for breakthrough application speed and scale.
-            <br><br>
-            Hazelcast IMDG is easy to work with and brings a highly resilient
-            and elastic memory resource to all your applications.
         </section>
 
         <section>
