--- a/talks/index.html
+++ b/talks/index.html
@@ -39,6 +39,15 @@
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
+
+    <tr>
+        <td>84.</td>
+        <td>Kielce JUG</td>
+        <td><a href="https://www.meetup.com/Kielce-Java-User-Group/">Hazelcast: The Hitchhiker's Guide</a></td>
+        <td>23.04.2020</td>
+        <td>Online</td>
+    </tr>
+
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">2020</td>
     </tr>
