--- a/talks/index.html
+++ b/talks/index.html
@@ -41,6 +41,10 @@
     </tr>
 
     <tr>
+        <td style="background: #ffffff" colspan="5" align="center">PAST</td>
+    </tr>
+
+    <tr>
         <td>84.</td>
         <td>Kielce JUG</td>
         <td><a href="https://www.meetup.com/Kielce-Java-User-Group/">Hazelcast: The Hitchhiker's Guide</a></td>
@@ -67,9 +71,7 @@
         <td>18.03.2020</td>
         <td>Online</td>
     </tr>
-        
-    <tr><td style="background: #ffffff" colspan="5" align="center">PAST</td></tr>
-    
+
     <tr>
         <td>81.</td>
         <td data-location="50.028506, 22.001869" data-place="Apart Hotel 12">RzeszówJUG</td>
