--- a/talks/index.html
+++ b/talks/index.html
@@ -47,6 +47,21 @@
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">PAST</td>
     </tr>
+        
+    <tr>
+        <td>86.</td>
+        <td>DevTalks</td>
+        <td><a href="https://www.devtalks.ro">Hazelcast: The Hitchhiker's Guide</a></td>
+        <td>10.06.2020</td>
+        <td>Online</td>
+    </tr>
+    <tr>
+        <td>85.</td>
+        <td>Java Fest</td>
+        <td><a href="https://javafest.com.ua/">Hazelcast: The Hitchhiker's Guide</a></td>
+        <td>30.05.2020</td>
+        <td>Online</td>
+    </tr>
 
     <tr>
         <td>84.</td>
