--- a/talks/hazelcast/index.html
+++ b/talks/hazelcast/index.html
@@ -462,9 +462,7 @@
 
         <section>
             <h3>Envoy Proxy</h3>
-            Apache Shiro is a security framework that performs authentication, authorization, cryptography, and session
-            management.
-            Shiro uses Hazelcast for caching and session clustering.
+            Envoy is an open source edge and service proxy, designed for cloud-native applications.
             <br><br>
 
             <h4>
