--- a/talks/index.html
+++ b/talks/index.html
@@ -47,6 +47,13 @@
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">PAST</td>
     </tr>
+    <tr>
+        <td>87.</td>
+        <td>Segfault Online</td>
+        <td><a href="http://segfault.events/">Fantastic Frameworks and How to Avoid Them - Director's Cut</a></td>
+        <td>25.06.2020</td>
+        <td>Online</td>
+    </tr>
         
     <tr>
         <td>86.</td>
