--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -122,6 +122,7 @@
     <img src="img/95.png" width="800"/>
     <img src="img/96.jpg" width="800"/>
     <img src="img/97.png" width="800"/>
+    <img src="img/98.png" width="800"/>
 </div>
 
 </body>
