--- a/talks/index.html
+++ b/talks/index.html
@@ -43,6 +43,13 @@
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
+    <tr>
+        <td>88.</td>
+        <td>DevTalks</td>
+        <td><a href="http://4developers.org.pl/">Hazelcast: The Hitchhiker's Guide</a></td>
+        <td>18.09.2020</td>
+        <td>Online</td>
+    </tr>
        
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">PAST</td>
