--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -123,6 +123,7 @@
     <img src="img/96.jpg" width="800"/>
     <img src="img/97.png" width="800"/>
     <img src="img/98.png" width="800"/>
+    <img src="img/99.png" width="800"/>
 </div>
 
 </body>
