--- a/talks/index.html
+++ b/talks/index.html
@@ -45,7 +45,7 @@
     </tr>
     <tr>
         <td>88.</td>
-        <td>DevTalks</td>
+        <td>4Developers Online</td>
         <td><a href="http://4developers.org.pl/">Hazelcast: The Hitchhiker's Guide</a></td>
         <td>18.09.2020</td>
         <td>Online</td>
