--- a/talks/index.html
+++ b/talks/index.html
@@ -44,15 +44,22 @@
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
     <tr>
-        <td>88.</td>
-        <td>4Developers Online</td>
-        <td><a href="http://4developers.org.pl/">Hazelcast: The Hitchhiker's Guide</a></td>
-        <td>18.09.2020</td>
+        <td>89.</td>
+        <td>JFuture 2020</td>
+        <td><a href="https://jfuture.dev">Hazelcast: The Hitchhiker's Guide</a></td>
+        <td>23.10.2020</td>
         <td>Online</td>
     </tr>
        
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">PAST</td>
+    </tr>
+    <tr>
+        <td>88.</td>
+        <td>4Developers</td>
+        <td><a href="http://4developers.org.pl/">Hazelcast: The Hitchhiker's Guide</a></td>
+        <td>18.09.2020</td>
+        <td>Online</td>
     </tr>
     <tr>
         <td>87.</td>
