--- a/talks/fantastic-frameworks/index.html
+++ b/talks/fantastic-frameworks/index.html
@@ -68,8 +68,6 @@
             <h2><a href="http://pivovarit.github.io"> Grzegorz Piwowarek</a></h2>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
             <br>
-            <img src="img/hz.png" width="20%"/><br>
-
         </section>
 
         <section>
@@ -82,21 +80,9 @@
         </section>
 
         <section></section>
-        <section>
-            <img src="img/hz.png" width="20%"/><br>
-
-            The Hazelcast IMDG is an operational in-memory computing platform that manages data and distributes
-            processing using memory and parallel execution for breakthrough application speed and scale.
-            <br><br>
-            Hazelcast IMDG is easy to work with and brings a highly resilient
-            and elastic memory resource to all your applications.
-        </section>
 
         <section>
-            <h2>Developers Smalltalk?</h2>
-
-            <img src="img/familiada.png" width="80%"/>
-            <h2 class="fragment">"What frameworks do you use?" - 100</h2>
+            <img src="img/1gb.jpg" width="70%"/>
         </section>
 
         <section>
@@ -359,11 +345,6 @@
                 private Collection employees;
             </code></pre>
             <small>http://www.annotatiomania.com</small>
-        </section>
-
-        <section>
-            <img src="img/orm.png"/>
-            <h4><a href="https://twitter.com/lukaseder/status/1051858654989836288">https://twitter.com/lukaseder/status/1051858654989836288</a></h4>
         </section>
 
         <section>
