--- a/talks/index.html
+++ b/talks/index.html
@@ -44,16 +44,25 @@
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
     <tr>
-        <td>89.</td>
+        <td>90.</td>
         <td>JFuture 2020</td>
         <td><a href="https://jfuture.dev">Hazelcast: The Hitchhiker's Guide</a></td>
         <td>23.10.2020</td>
+        <td>Online</td>
+    </tr>
+
+    <tr>
+        <td>89.</td>
+        <td>Click Online</td>
+        <td><a href="https://click.org.pl">Fantastic Frameworks and How to Avoid Them</a></td>
+        <td>03.10.2020</td>
         <td>Online</td>
     </tr>
        
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">PAST</td>
     </tr>
+
     <tr>
         <td>88.</td>
         <td>4Developers</td>
