--- a/talks/fantastic-frameworks/index.html
+++ b/talks/fantastic-frameworks/index.html
@@ -59,6 +59,8 @@
     <!-- Any section element inside of this container is displayed as a slide -->
     <div class="slides">
 
+        <section data-background-image="img/click.png">></section>
+
         <section>
             <h1>Fantastic Frameworks</h1>
             <h3>...and How to Avoid Them</h3>
@@ -902,21 +904,13 @@
 
         <section>
 
-            <img src="img/hz-client.png"/>
-
-            <br>
-            <small>https://github.com/quarkusio/quarkus/pull/6758</small>
+            <img src="img/quarkus-hazelcast-client.png" width="80%"/>
         </section>
 
         <section>
             <blockquote>
                 Using common sense is the ultimate Best Practice™.
             </blockquote>
-
-            <blockquote class="fragment">
-                Nobody cares if it’s your code or the library you used
-            </blockquote>
-
         </section>
 
         <section>
@@ -952,6 +946,10 @@
             <br>
             <img src="img/hz.png" width="30%"/><br>
 
+        </section>
+
+        <section>
+        <h1>Q&A</h1>
         </section>
     </div>
 </div>
