--- a/talks/tdd/index.html
+++ b/talks/tdd/index.html
@@ -75,13 +75,15 @@
         <section>
             <h1>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h1>
             <h2>Senior Software Engineer @ <a href="http://hazelcast.com/">Hazelcast</a></h2>
-            <h2>Trainer @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h2>
+            <h2>Independent Trainer</a></h2>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
             <br>
 
         </section>
 
-        <section></section>
+        <section>
+            <img src="img/tdd-how-to.png" width="60%"/>
+        </section>
 
         <section>
             <h2>Thank You!</h2>
