--- a/talks/tdd/index.html
+++ b/talks/tdd/index.html
@@ -83,6 +83,8 @@
 
         <section>
             <img src="img/tdd-how-to.png" width="60%"/>
+            <br>
+            <small><a href="https://twitter.com/cbirchall/status/1311671776007593985">https://twitter.com/cbirchall/status/1311671776007593985</a> </small>
         </section>
 
         <section>
