--- a/talks/index.html
+++ b/talks/index.html
@@ -44,10 +44,18 @@
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
     <tr>
-        <td>90.</td>
+        <td>91.</td>
         <td>JFuture 2020</td>
         <td><a href="https://jfuture.dev">Hazelcast: The Hitchhiker's Guide</a></td>
         <td>23.10.2020</td>
+        <td>Online</td>
+    </tr>
+
+    <tr>
+        <td>90.</td>
+        <td>British Columbia Institute of Technology</td>
+        <td><a href="">TDD - What They Forgot to Tell You</a></td>
+        <td>16.10.2020</td>
         <td>Online</td>
     </tr>
 
