--- a/talks/tdd/index.html
+++ b/talks/tdd/index.html
@@ -88,6 +88,15 @@
         </section>
 
         <section>
+            <h2>TDD Cycle</h2>
+            <br>
+            <h3 class="fragment">1. Write a (failing) test</h3>
+            <h3 class="fragment">2. Write the code</h3>
+            <h3 class="fragment">3. Run tests</h3>
+            <h3 class="fragment">4. Refactor (or fix the code and go back to 3)</h3>
+        </section>
+
+        <section>
             <h2>TDD Benefits</h2>
             <br>
             <h3 class="fragment">1. Better design</h3>
@@ -98,12 +107,26 @@
         </section>
 
         <section>
-            <h2>TDD Cycle</h2>
-            <br>
-            <h3 class="fragment">1. Write a (failing) test</h3>
-            <h3 class="fragment">2. Write the code</h3>
-            <h3 class="fragment">3. Run tests</h3>
-            <h3 class="fragment">4. Refactor or fix the code (then go back to 3)</h3>
+            <h2>How does TDD improve the design?</h2>
+        </section>
+
+
+        <section>
+            <h2>How does TDD decrease the development time?</h2>
+        </section>
+
+
+        <section>
+            <h2>How does TDD decrease the number of bugs?</h2>
+        </section>
+
+
+        <section>
+            <h2>Why it's professional?</h2>
+        </section>
+
+        <section>
+            <h2>***insert a demo here***</h2>
         </section>
 
         <section>
