--- a/talks/tdd/index.html
+++ b/talks/tdd/index.html
@@ -147,6 +147,11 @@
         </section>
 
         <section>
+            <li>Test-Driven Development by Example, Kent Beck</li>
+            <li>Improving your Test Driven Development in 45 minutes, Jakub Nabrdalik</li>
+        </section>
+
+        <section>
             <h2>Thank You!</h2>
             <h4><a href="https://pivovarit.github.io/talks/tdd">https://pivovarit.github.io/talks/tdd</a>
             </h4>
