--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -124,6 +124,8 @@
     <img src="img/97.png" width="800"/>
     <img src="img/98.png" width="800"/>
     <img src="img/99.png" width="800"/>
+    <img src="img/100.png" width="800"/>
+    <img src="img/101.png" width="800"/>
 </div>
 
 </body>
