--- a/talks/wip/githubops/index.html
+++ b/talks/wip/githubops/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Pragmatic Functional Programming in Java</title>
+    <title>GitHubOps</title>
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -90,6 +90,19 @@
         </section>
 
         <section>
+        </section>
+
+
+        <section>
+            <h2>CODEOWNERS</h2>
+
+            <img src="img/codeowners.png" width="50%"/><br>
+            <img src="img/codeowners-review.png" width="50%"/><br>
+        </section>
+
+        <section>
+            <h2>Submit new issue</h2>
+
             <img src="img/new-issue-standard.png" width="70%"/><br>
         </section>
 
@@ -114,9 +127,6 @@
 
 
 
-        <section>
-            <h2>CODEOWNERS</h2>
-        </section>
 
 
         <section>
