--- a/talks/wip/githubops/index.html
+++ b/talks/wip/githubops/index.html
@@ -101,6 +101,17 @@
         </section>
 
         <section>
+            <img src="img/codeowners-teams.png" width="50%"/><br>
+            <img src="img/codeowners-teams-setup.png" width="50%"/><br>
+        </section>
+
+        <section>
+            <img src="img/codeowners-teams-autoassignment.png" width="50%"/><br>
+        </section>
+
+        <section></section>
+
+        <section>
             <h2>Submit new issue</h2>
 
             <img src="img/new-issue-standard.png" width="70%"/><br>
@@ -131,6 +142,22 @@
 
         <section>
             <h2>Dependabot</h2>
+        </section>
+
+        <section>
+            <img src="img/dependabot.png" width="50%"/><br>
+        </section>
+
+        <section>
+            <img src="img/dependabot-example.png" width="80%"/><br>
+        </section>
+
+        <section>
+            <img src="img/dependabot-pr.png" width="70%"/><br>
+        </section>
+
+        <section>
+            <img src="img/dependabot-custom.png" width="70%"/><br>
         </section>
 
         <section>
