--- a/talks/wip/githubops/index.html
+++ b/talks/wip/githubops/index.html
@@ -249,6 +249,10 @@
         </section>
 
         <section>
+            <img src="img/hazelcast-docker-actions.png" width="70%"/><br>
+        </section>
+
+        <section>
             <h2>Thank You!</h2>
             <h4><a href="https://pivovarit.github.io/talks/github-ops">https://pivovarit.github.io/talks/github-ops</a>
             </h4>
