--- a/talks/wip/githubops/index.html
+++ b/talks/wip/githubops/index.html
@@ -95,6 +95,7 @@
 
         <section>
             <h2>CODEOWNERS</h2>
+            <h4>obligatory reviewers</h4>
 
             <img src="img/codeowners.png" width="50%"/><br>
             <img src="img/codeowners-review.png" width="50%"/><br>
@@ -112,40 +113,41 @@
         <section></section>
 
         <section>
-            <h2>Submit new issue</h2>
+            <h2>Submit new issue - plain</h2>
 
             <img src="img/new-issue-standard.png" width="70%"/><br>
         </section>
 
         <section>
+            <h2>Submit new issue - user friendly</h2>
+
             <img src="img/new-issue-customized.png" width="70%"/><br>
             <img src="img/new-issue-customized-internals.png" width="50%"/><br>
 
         </section>
 
         <section>
+            <h2>Automatic labels, assignees, etc</h2>
+
             <img src="img/new-issue-customized-automated.png" width="50%"/><br>
 
         </section>
 
+
         <section>
+            <h2>In Action:</h2>
+
             <img src="img/new-issue-customized-templates.png" width="70%"/><br>
         </section>
 
         <section>
+            <h2>Redirects are possible as well</h2>
+
             <img src="img/new-issue-customized-redirect.png" width="70%"/><br>
         </section>
 
-
-
-
-
         <section>
             <h2>Dependabot</h2>
-        </section>
-
-        <section>
-            <img src="img/dependabot.png" width="50%"/><br>
         </section>
 
         <section>
@@ -153,6 +155,12 @@
         </section>
 
         <section>
+            <img src="img/dependabot.png" width="50%"/><br>
+        </section>
+
+        <section>
+            <h2>Dependabot can update itself</h2>
+
             <img src="img/dependabot-pr.png" width="70%"/><br>
         </section>
 
