--- a/talks/index.html
+++ b/talks/index.html
@@ -37,15 +37,25 @@
     </thead>
     <tbody>
 
-    <tr>
-        <td style="background: #ffffff" colspan="5" align="center">2020</td>
-    </tr>
+
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
+    </tr>
+
+    <tr>
+        <td>92.</td>
+        <td>Talk4Devs 2021</td>
+        <td><a href="https://app.evenea.pl/event/talk4devs65/">Hazelcast: The Hitchhiker's Guide</a></td>
+        <td>27.01.2021</td>
+        <td>Online</td>
     </tr>
        
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">PAST</td>
+    </tr>
+
+    <tr>
+        <td style="background: #ffffff" colspan="5" align="center">2020</td>
     </tr>
         
     <tr>
