--- a/talks/java-n/index.html
+++ b/talks/java-n/index.html
@@ -582,6 +582,38 @@
             <br>
             <blockquote>Remove the Nashorn JavaScript script engine and APIs, and the jjs tool.</blockquote>
         </section>
+
+        <section>
+            <h2 class="fragment">Java 16</h2>
+        </section>
+
+        <section>
+            <h2>JEP 397: Sealed Classes (Second Preview)</h2>
+            <br>
+            <blockquote>Enhance the Java programming language with sealed classes and interfaces. Sealed classes and
+                interfaces restrict which other classes or interfaces may extend or implement them.
+            </blockquote>
+        </section>
+
+        <section>
+            <h2>JEP 395: Records(release)</h2>
+            <br>
+            <blockquote>Enhance the Java programming language with records.</blockquote>
+        </section>
+
+        <section>
+            <h2>JEP 394: Pattern Matching for instanceof</h2>
+            <br>
+            <blockquote>Enhance the Java programming language with pattern matching for the instanceof operator.
+            </blockquote>
+        </section>
+
+        <section>
+            <h2>JEP 376: ZGC: Concurrent Thread-Stack Processing</h2>
+            <br>
+            <blockquote>Move ZGC thread-stack processing from safepoints to a concurrent phase.
+            </blockquote>
+        </section>
     </div>
 </div>
 
