--- a/talks/fantastic-frameworks/index.html
+++ b/talks/fantastic-frameworks/index.html
@@ -124,6 +124,10 @@
         </section>
 
         <section>
+            <img src="img/patched.jpg" width="60%"/>
+        </section>
+
+        <section>
             <h2>Meanwhile in Scala ecosystem...</h2>
             <br>
             <blockquote>
