--- a/talks/java-n/index.html
+++ b/talks/java-n/index.html
@@ -614,6 +614,38 @@
             <blockquote>Move ZGC thread-stack processing from safepoints to a concurrent phase.
             </blockquote>
         </section>
+
+        <section>
+            <h2 class="fragment">Java 17</h2>
+        </section>
+
+        <section>
+            <h2>JEP 409: Sealed Classes</h2>
+            <br>
+            <blockquote>Enhance the Java programming language with sealed classes and interfaces. Sealed classes and
+                interfaces restrict which other classes or interfaces may extend or implement them.
+            </blockquote>
+        </section>
+
+        <section>
+            <h2>JEP 410: Remove the Experimental AOT and JIT Compiler</h2>
+            <br>
+            <blockquote>Remove the experimental Java-based ahead-of-time (AOT) and just-in-time (JIT) compiler. This compiler has seen little use since its introduction and the effort required to maintain it is significant.
+            </blockquote>
+        </section>
+
+        <section>
+            <h2>JEP 411: Deprecate the Security Manager for Removal</h2>
+            <br>
+            <blockquote>Deprecate the Security Manager for removal in a future release. The Security Manager dates from Java 1.0. It has not been the primary means of securing client-side Java code for many years, and it has rarely been used to secure server-side code.
+            </blockquote>
+        </section>
+        <section>
+            <h2>JEP 403: Strongly Encapsulate JDK Internals</h2>
+            <br>
+            <blockquote>Strongly encapsulate all internal elements of the JDK, except for critical internal APIs such as sun.misc.Unsafe. It will no longer be possible to relax the strong encapsulation of internal elements via a single command-line option, as was possible in JDK 9 through JDK 16.
+            </blockquote>
+        </section>
     </div>
 </div>
 
