--- a/talks/index.html
+++ b/talks/index.html
@@ -41,6 +41,22 @@
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
+
+    <tr>
+        <td>93.</td>
+        <td>Javeloper 2021</td>
+        <td><a href="https://javeloper.pl">Wprowadzenie do ekosystemu Hazelcast 5.0</a></td>
+        <td>23.09.2021</td>
+        <td>Online</td>
+    </tr>
+
+    <tr>
+        <td>93.</td>
+        <td>BBJUG#34</td>
+        <td><a href="https://twitter.com/bielskobialajug?lang=en">Wprowadzenie do ekosystemu Hazelcast 5.0</a></td>
+        <td>09.09.2021</td>
+        <td>Online</td>
+    </tr>
        
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">PAST</td>
@@ -48,8 +64,7 @@
      <tr>
         <td style="background: #ffffff" colspan="5" align="center">2021</td>
     </tr>
-        
-   
+
     <tr>
         <td>92.</td>
         <td>Talk4Devs 2021</td>
